# virtuoso-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/skills/amp-copilot/: SKILL.md
.claude/skills/cell-explore/: SKILL.md
.claude/skills/gm-over-id/: SKILL.md
.claude/skills/maestro/: SKILL.md
.claude/skills/ocean-netlist-regen/: SKILL.md
.claude/skills/sim-measure/: SKILL.md
.claude/skills/sim-run/: SKILL.md
.claude/skills/sim-setup/: SKILL.md
.claude/skills/sim-sweep/: SKILL.md
.claude/skills/skill-exec/: SKILL.md
.claude/skills/spec-driven-circuit-design/: SKILL.md
.claude/skills/spectre-netlist-template/: SKILL.md
.claude/skills/tunnel-connect/: SKILL.md
.github/workflows/: ci.yml  release.yml
.pensieve/: state.md
.pensieve/decisions/: 2026-04-19-createnetlist-cmi2116-todo.md  2026-04-19-standalone-spectre-for-one-off-verification.md  2026-04-20-defer-version-branches-until-api-diverges.md
.pensieve/knowledge/cadence-ic23-ade-window-title/: content.md
.pensieve/knowledge/cadence-ic23-dbopencellviewbytype/: content.md
.pensieve/knowledge/cadence-virtuoso-library-not-registered/: content.md
.pensieve/knowledge/maestro-session-types/: content.md
.pensieve/maxims/: skill-nil-is-not-an-error.md
.pensieve/pipelines/: run-when-committing.md  run-when-syncing-to-main.md
docs/plans/: 2026-04-04-sim-automation-design.md
process_data/smic13mmrf/: nmos_lookup.json
resources/: .env_template  ramic_bridge.il  rb_connect_terminal.il
resources/daemons/: ramic_bridge_daemon_27.py  ramic_bridge_daemon_3.py
src/: command_log.rs  config.rs  error.rs  exit_codes.rs  lib.rs  main.rs  models.rs  output.rs  tests.rs  version.rs  vtui.rs
src/client/: bridge.rs  editor.rs  layout_ops.rs  maestro_ops.rs  mod.rs  schematic_ops.rs  window_ops.rs
src/commands/: cell.rs  design.rs  exec.rs  init.rs  maestro.rs  mod.rs  open.rs  optim.rs  process.rs  restart.rs  schema.rs  schematic.rs  sim.rs  skill.rs  start.rs  status.rs  stop.rs  tunnel.rs  window.rs
src/daemon/: main.rs
src/ocean/: corner.rs  mod.rs
src/spectre/: jobs.rs  mod.rs  parsers.rs  runner.rs
src/transport/: mod.rs  ssh.rs  tunnel.rs
src/tui/: input.rs  mod.rs  render.rs  state.rs  theme.rs
src/tui/app/: data.rs  (+5 more)
(+16 files in other folders)
