[package]
name = "virtuoso-cli"
version = "0.1.7"
edition = "2021"
description = "CLI tool to control Cadence Virtuoso from anywhere, locally or remotely"
license = "MIT"
repository = "https://github.com/deanyou/virtuoso-cli"
homepage = "https://github.com/deanyou/virtuoso-cli"
keywords = ["eda", "cadence", "virtuoso", "analog-ic", "spectre"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".cadence/", ".claude/", ".pensieve/", "plots/", "docs/plans/", "sim/", "process_data/"]

[[bin]]
name = "vcli"
path = "src/main.rs"

[[bin]]
name = "vtui"
path = "src/vtui.rs"

[[bin]]
name = "virtuoso-daemon"
path = "src/daemon/main.rs"
required-features = ["daemon"]

[features]
daemon = []

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
include_dir = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
tempfile = "3"
shlex = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
